--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             color: #fff;
                             padding: 18px 22px;
                             font-size: 1.2rem;
-                            font-weight: 800;" href="./TripoGames.html">
+                            font-weight: 800;" href="./views/TripoGames.html">
                 Tripo Games
             </a>
         </div>
@@ -40,13 +40,13 @@
                     <li class="GameNavR__item GameNavR__item--Dropdowns" style="font-size: 1.1rem; ">
                         <a style="cursor: default;" href="#">Game</a>
                         <ul class="GameNavR__itemUL">
-                            <li class="GameNavR__itemUL__li"><a href="./Games_Kipon.html">Kipon</a></li>
-                            <li class="GameNavR__itemUL__li"><a href="./Games_Robotrix.html">Robotrix</a></li>
-                            <li class="GameNavR__itemUL__li"><a href="./Games_TreasureBox.html">Treasure Box</a></li>
+                            <li class="GameNavR__itemUL__li"><a href="./views/Games_Kipon.html">Kipon</a></li>
+                            <li class="GameNavR__itemUL__li"><a href="./views/Games_Robotrix.html">Robotrix</a></li>
+                            <li class="GameNavR__itemUL__li"><a href="./views/Games_TreasureBox.html">Treasure Box</a></li>
                         </ul>
                     </li>
-                    <li class="GameNavR__item"><a href="./Careers.html">Careers</a></li>
-                    <li class="GameNavR__item"><a href="./About.html">About</a></li>
+                    <li class="GameNavR__item"><a href="./views/Careers.html">Careers</a></li>
+                    <li class="GameNavR__item"><a href="./views/About.html">About</a></li>
                     <li class="GameNavR__item"><a href="#JoinTeam_form">Contact</a></li>
                 </ul>
             </nav>
@@ -97,7 +97,7 @@
                         </div>
                     </div>
                     <div class="About__ExploreBG">
-                        <a href="./Games_Kipon.html">
+                        <a href="./views/Games_Kipon.html">
                             <img src="../public/IMG/c837a6_d5b3b2009d894fa2932bc20684b2a93d~mv2.jpg" alt="">
                         </a>
                     </div>
@@ -116,7 +116,7 @@
                     </div>
                     <div class="About__ExploreBG">
                         <picture>
-                            <a href="./Games_Robotrix.html">
+                            <a href="./views/Games_Robotrix.html">
                                 <img src="../public/IMG/c837a6_bf93fe6ee32a41b2b69211460f928b15~mv2.jpg" alt="">
                             </a>
                         </picture>
@@ -136,7 +136,7 @@
                     </div>
                     <div class="About__ExploreBG">
                         <picture>
-                            <a href="./Games_TreasureBox.html">
+                            <a href="./views/Games_TreasureBox.html">
                                 <img src="../public/IMG/c837a6_f49b2d5464854cc18b19c7e183d05e2c~mv2.jpg" alt="">
                             </a>
                         </picture>
@@ -184,7 +184,7 @@
                             tell a story and let your users know a little more about you.</p>
                     </div>
                     <div style="margin-bottom: 3.3rem;" class="About2__More ">
-                        <a href="./About.html">Learn More</a>
+                        <a href="./views/About.html">Learn More</a>
                     </div>
                     <div class="About2__img ">
                         <div class="About2__imgBG fade-in-down">
@@ -352,7 +352,7 @@
                             the
                             game.</h1>
                         <div>
-                            <a class="JoinTeam__topLink text_color1" href="./Careers.html">Explore Careers</a>
+                            <a class="JoinTeam__topLink text_color1" href="./views/Careers.html">Explore Careers</a>
                         </div>
                     </div>
                     <div class="d-flex row">
@@ -499,8 +499,8 @@
                         <div class="footer__ul">
                             <h6 class="text_color1">Navigation</h6>
                             <a href="#">Games</a>
-                            <a href="#">Careers</a>
-                            <a href="#">About</a>
+                            <a href="./views/Careers.html">Careers</a>
+                            <a href="./views/About.html">About</a>
                             <a href="#">Contact</a>
                             <a href="#">Accessibility</a>
                             <a href="#">Terms & Conditions</a>
