--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         href="https://fonts.googleapis.com/css2?family=Wix+Madefor+Display:wght@400..800&family=Wix+Madefor+Text:ital,wght@0,400..800;1,400..800&display=swap"
         rel="stylesheet">
     <style>
-        @import url(../node_modules/bootstrap/dist/css/bootstrap.css);
+        @import url(./node_modules/bootstrap/dist/css/bootstrap.css);
 
-        @import url(../public/CSS/reast.css);
-        @import url(../public/CSS/animation.css);
-        @import url(../public/CSS/all.css);
+        @import url(./public/CSS/reast.css);
+        @import url(./public/CSS/animation.css);
+        @import url(./public/CSS/all.css);
     </style>
 </head>
 
@@ -520,10 +520,10 @@
                         <div class="footer__ul">
                             <h6 class="text_color1">Find Us On</h6>
                             <a class="d-block p-0" href="#">
-                                <img src="../public/IMG/Google (1).png" alt="">
+                                <img src="./public/IMG/Google (1).png" alt="">
                             </a>
                             <a class="d-block p-0" href="#">
-                                <img src="../public/IMG/apple.png" alt="">
+                                <img src="./public/IMG/apple.png" alt="">
                             </a>
                         </div>
                     </div>
@@ -536,9 +536,9 @@
             </div>
         </div>
     </div>
-    <script src="../public/JS/TripoGames.js"></script>
-    <script src="../public/Js/animation.js"></script>
-    <script src="../public/JS/Navbar.js"></script>
+    <script src="./public/JS/TripoGames.js"></script>
+    <script src="./public/Js/animation.js"></script>
+    <script src="./public/JS/Navbar.js"></script>
 
 </body>
 
