--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Wix+Madefor+Display:wght@400..800&family=Wix+Madefor+Text:ital,wght@0,400..800;1,400..800&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Wix+Madefor+Display:wght@400.800&family=Wix+Madefor+Text:ital,wght@0,400.800;1,400.800&display=swap"
         rel="stylesheet">
     <style>
         @import url(./node_modules/bootstrap/dist/css/bootstrap.css);
-
         @import url(./public/CSS/reast.css);
         @import url(./public/CSS/animation.css);
         @import url(./public/CSS/all.css);
@@ -58,7 +57,7 @@
             <div class="row" style=" position: relative;">
                 <div style="overflow: hidden;padding: 0; position: absolute; top: 0; width: 100%; height: 100%;">
                     <div id="banner_BG" class="banner_BG">
-                        <img src="../public/IMG/c837a6_aa803204cef842e0b9ad7d820e64f77c~mv2.jpg" alt="">
+                        <img src="./public/IMG/c837a6_aa803204cef842e0b9ad7d820e64f77c~mv2.jpg" alt="">
                     </div>
                 </div>
 
@@ -72,9 +71,9 @@
                         </p>
                     </div>
                     <div class="d-flex flex-row" style="z-index: 9;">
-                        <div style="margin-right: 15px;"><a href="#"><img src="../public/IMG/apple.png" alt=""></a>
+                        <div style="margin-right: 15px;"><a href="#"><img src="./public/IMG/apple.png" alt=""></a>
                         </div>
-                        <div><a href="#"><img src="../public/IMG/Google (1).png" alt=""></a></div>
+                        <div><a href="#"><img src="./public/IMG/Google (1).png" alt=""></a></div>
                     </div>
                 </div>
             </div>
@@ -98,7 +97,7 @@
                     </div>
                     <div class="About__ExploreBG">
                         <a href="./views/Games_Kipon.html">
-                            <img src="../public/IMG/c837a6_d5b3b2009d894fa2932bc20684b2a93d~mv2.jpg" alt="">
+                            <img src="./public/IMG/c837a6_d5b3b2009d894fa2932bc20684b2a93d~mv2.jpg" alt="">
                         </a>
                     </div>
 
@@ -117,7 +116,7 @@
                     <div class="About__ExploreBG">
                         <picture>
                             <a href="./views/Games_Robotrix.html">
-                                <img src="../public/IMG/c837a6_bf93fe6ee32a41b2b69211460f928b15~mv2.jpg" alt="">
+                                <img src="./public/IMG/c837a6_bf93fe6ee32a41b2b69211460f928b15~mv2.jpg" alt="">
                             </a>
                         </picture>
                     </div>
@@ -137,7 +136,7 @@
                     <div class="About__ExploreBG">
                         <picture>
                             <a href="./views/Games_TreasureBox.html">
-                                <img src="../public/IMG/c837a6_f49b2d5464854cc18b19c7e183d05e2c~mv2.jpg" alt="">
+                                <img src="./public/IMG/c837a6_f49b2d5464854cc18b19c7e183d05e2c~mv2.jpg" alt="">
                             </a>
                         </picture>
                     </div>
@@ -188,10 +187,10 @@
                     </div>
                     <div class="About2__img ">
                         <div class="About2__imgBG fade-in-down">
-                            <img class="d-block " src="../public/IMG/shutterstock_1535881442_edited.jpg" alt="">
+                            <img class="d-block " src="./public/IMG/shutterstock_1535881442_edited.jpg" alt="">
                         </div>
                         <div class="About2__SmallImg fade-in-element">
-                            <img src="../public/IMG/shutterstock_1768049210.png" alt="">
+                            <img src="./public/IMG/shutterstock_1768049210.png" alt="">
                         </div>
                     </div>
 
@@ -218,7 +217,7 @@
                 <div class="OurGames__container d-flex flex-column justify-content-between "
                     style="position: relative; margin-bottom: 100px; margin-left: auto; margin-right: auto;">
                     <div class="OurGames__BG">
-                        <img src="../public/IMG/c837a6_1cf50738638a41d680ed4dc3db5e5492~mv2.png" alt="">
+                        <img src="./public/IMG/c837a6_1cf50738638a41d680ed4dc3db5e5492~mv2.png" alt="">
                     </div>
                     <div class="d-flex">
                         <div class="flex-grow-1 d-flex justify-content-center align-items-center">
@@ -227,7 +226,7 @@
                                 <div class=" d-flex  align-items-center " style="width: 280px;margin-bottom: 38px;">
                                     <a href="#">
                                         <div class="OurGames__containerItemIMG">
-                                            <img src=" ../public/IMG/shutterstock_1811519149.jpg" alt="">
+                                            <img src=" ./public/IMG/shutterstock_1811519149.jpg" alt="">
                                         </div>
                                     </a>
                                     <div class="d-flex flex-column">
@@ -245,10 +244,10 @@
                                 </div>
                                 <div>
                                     <div class="d-flex flex-row">
-                                        <div style="margin-right: 15px;"><a href="#"><img src="../public/IMG/apple.png"
+                                        <div style="margin-right: 15px;"><a href="#"><img src="./public/IMG/apple.png"
                                                     alt=""></a>
                                         </div>
-                                        <div><a href="#"><img src="../public/IMG/Google (1).png" alt=""></a></div>
+                                        <div><a href="#"><img src="./public/IMG/Google (1).png" alt=""></a></div>
                                     </div>
                                 </div>
                             </div>
@@ -259,7 +258,7 @@
                                 <div class=" d-flex  align-items-center " style="width: 280px;margin-bottom: 38px;">
                                     <a href="#">
                                         <div class="OurGames__containerItemIMG">
-                                            <img src=" ../public/IMG/shutterstock_1711821976.jpg" alt="">
+                                            <img src=" ./public/IMG/shutterstock_1711821976.jpg" alt="">
                                         </div>
                                     </a>
                                     <div class="d-flex flex-column">
@@ -277,10 +276,10 @@
                                 </div>
                                 <div>
                                     <div class="d-flex flex-row">
-                                        <div style="margin-right: 15px;"><a href="#"><img src="../public/IMG/apple.png"
+                                        <div style="margin-right: 15px;"><a href="#"><img src="./public/IMG/apple.png"
                                                     alt=""></a>
                                         </div>
-                                        <div><a href="#"><img src="../public/IMG/Google (1).png" alt=""></a></div>
+                                        <div><a href="#"><img src="./public/IMG/Google (1).png" alt=""></a></div>
                                     </div>
                                 </div>
                             </div>
@@ -293,7 +292,7 @@
                                 <div class=" d-flex  align-items-center " style="width: 280px;margin-bottom: 38px;">
                                     <a href="#">
                                         <div class="OurGames__containerItemIMG">
-                                            <img src=" ../public/IMG/shutterstock_1015612369.jpg" alt="">
+                                            <img src=" ./public/IMG/shutterstock_1015612369.jpg" alt="">
                                         </div>
                                     </a>
                                     <div class="d-flex flex-column">
@@ -313,17 +312,17 @@
                                 </div>
                                 <div>
                                     <div class="d-flex flex-row">
-                                        <div style="margin-right: 15px;"><a href="#"><img src="../public/IMG/apple.png"
+                                        <div style="margin-right: 15px;"><a href="#"><img src="./public/IMG/apple.png"
                                                     alt=""></a>
                                         </div>
-                                        <div><a href="#"><img src="../public/IMG/Google (1).png" alt=""></a></div>
+                                        <div><a href="#"><img src="./public/IMG/Google (1).png" alt=""></a></div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="flex-grow-1 d-flex justify-content-center align-items-center"
                             style="position: relative; left: 0;top: 0;z-index: 9;">
-                            <img class="fade-in-right" src="../public/IMG/shutterstock_1580821522.png" alt="">
+                            <img class="fade-in-right" src="./public/IMG/shutterstock_1580821522.png" alt="">
                         </div>
                     </div>
 
@@ -343,7 +342,7 @@
                             height: 750px;
                             object-fit: cover;
                             object-position: 50% 50%;
-                        " src="../public/IMG/c837a6_cbd9440d3fce436c913d12b16be55401~mv2.jpg" alt="">
+                        " src="./public/IMG/c837a6_cbd9440d3fce436c913d12b16be55401~mv2.jpg" alt="">
                     </div>
                     <div class="JoinTeam__topTxT fade-in-element">
                         <h6 style="font-size: 1.2rem; font-weight: 700; ">Join Our Team</h6>
@@ -360,7 +359,7 @@
                         <div class="JoinTeam__topItem d-flex justify-content-center col-6"
                             style="position: static; z-index: 9;">
                             <div class="align-self-end" style="transform: translateY(3px);">
-                                <img class="fade-in-down2" src="../public/IMG/shutterstock_1806326989.png" alt="">
+                                <img class="fade-in-down2" src="./public/IMG/shutterstock_1806326989.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -408,7 +407,7 @@
                                 </div>
                                 <div class="mb-5">
                                     <div class="JoinTeam_input text_color1 ">
-                                        <label for="">Leave us a message...</label>
+                                        <label for="">Leave us a message..</label>
                                         <div style="height: 92px;">
                                             <textarea name="" id=""></textarea>
                                         </div>
