--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
         </div>
     </div>
     <script src="./public/JS/TripoGames.js"></script>
-    <script src="./public/Js/animation.js"></script>
+    <script src="./public/JS/animation.js"></script>
     <script src="./public/JS/Navbar.js"></script>
 
 </body>
