--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             color: #fff;
                             padding: 18px 22px;
                             font-size: 1.2rem;
-                            font-weight: 800;" href="./views/TripoGames.html">
+                            font-weight: 800;" href="./index.html">
                 Tripo Games
             </a>
         </div>
